tests/src/tests/fail/no-async-fn.stderr
error: an async_generic function should not be declared as async
 --> src/tests/fail/no-async-fn.rs:4:1
  |
4 | async fn do_some_stuff() -> bool {
  | ^^^^^
